Added movie poster display

--- a/app/views/search/movie.html.erb
+++ b/app/views/search/movie.html.erb
@@ -6,6 +6,7 @@
 	Rating: <%= @result["Rated"] %> <br>
 	Director: <%= @result["Director"] %> <br>
 	Plot: <%= @result["Plot"] %> <br>
+	<img src='<%=@result["Poster"]%>'></img>
 </div>
 
 <h3>Search again</h3>
